lms-yoshi/radioyoshi/templates/service.yaml
# Combined NodePort service for both TCP and UDP protocols
# Port 3483 translated to 23483 to avoid common port conflicts
apiVersion: v1
kind: Service
metadata:
  name: radioyoshi-nodeport
spec:
  ports:
    - name: main
      port: 9000
      targetPort: 9000
      nodePort: 30900
    - name: cli
      port: 9090
      targetPort: 9090
      nodePort: 30990
    - name: slimprototcp
      port: 23483
      targetPort: 3483
      protocol: TCP
      nodePort: 32483
    - name: slimprotoudp
      port: 23483
      targetPort: 3483
      protocol: UDP
      nodePort: 32483
  selector:
    app.kubernetes.io/instance: radioyoshi
    app.kubernetes.io/name: radioyoshi
    pod.name: main
  type: NodePort
